added usart adc debugger, extended vu-meter code

--- a/adc-debug/Makefile
+++ b/adc-debug/Makefile
@@ -10,7 +10,7 @@ CFLAGS = -mmcu=$(MCU) -DF_CPU=$(F_CPU) -Os
 LDFLAGS = 
 
 # Source and object files
-SRC = main.c adc.c knight.c binary.c vu1.c led_control.c cylon.c
+SRC = adc.c     main.c    usart.c
 OBJ = $(SRC:.c=.o)
 
 # Output binary
